# openrouter-cli

./: Cargo.toml
src/: main.rs
